fixed layout issue

--- a/style/main-style.scss
+++ b/style/main-style.scss
@@ -484,7 +484,7 @@ main {
   }
 }
 
-.connect {
+.connect-with-us {
   display: flex;
   flex-direction: column;
   justify-content: center;
